# advent-of-code-2020

./: README.md  pyproject.toml
day01/: report.py
day03/: sledding2.py
day05/: seats.py
day06/: customs2.py
day08/: loops.py
day1/: report.py  report2.py
day10/: jolts.py  jolts2.py
day11/: seats.py  seats2.py
day12/: directions.py  directions2.py
day13/: buses.py  buses2.py
day14/: bits.py  bits2.py
day15/: elves.py
day16/: tickets.py  tickets2.py
day17/: cubes_2d.py  cubes_3d.py  cubes_4d.py
day18/: maths.py  maths2.py
day19/: monster.py  monster2.py
day2/: passwords.py  passwords2.py
day20/: tiles.py  tiles2.py
day3/: sledding.py  sledding2.py
day4/: passports.py  passports2.py
day6/: customs.py  customs2.py
day7/: bags.py  bags2.py
day8/: loops.py  loops2.py
day9/: xmas.py
